# Engine

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  util.sh
UML/: engine_architecture.drawio
assets/: CMakeLists.txt
assets/maps/: map.dta
assets/textures/tilesets/: tileset_grass.json
docs/: README.md  _config.yml  index.md
docs/_docs/source_code/building/: cmake.md  index.md  instructions.md
docs/_docs/source_code/modules/: core.md  events.md  rendering.md  resourceHolder.md
docs/docs/: _config.yml  devserver.sh
docs/docs/_docs/: license.md
docs/docs/_docs/installation/: index.md
docs/docs/_docs/source_code/: index.md
docs/docs/_docs/source_code/modules/: index.md  physics.md  shared.md
docs/docs/_docs/utilities/: index.md  util_sh.md
scripts/: help.sh  module.sh
src/: CMakeLists.txt  GameSolution.sln  SfmlProject.sln  main.cpp
src/GameEngine/: GameEngine.vcxproj  GameEngine.vcxproj.filters
src/GameEngine/src/: main.cpp  pch.h
src/GameEngine/src/core/include/: BasicShape.h  Engine.h  GameTime.h
src/GameEngine/src/core/src/: BasicShape.cpp  Engine.cpp  GameTime.cpp
src/GameEngine/src/events/include/: IObserver.h  ISubject.h
src/GameEngine/src/events/src/: ISubject.cpp
src/GameEngine/src/networking/include/: networking.h
src/GameEngine/src/networking/src/: networking.cpp
src/GameEngine/src/physics/include/: Emitter.h  Particle.h  Physics.h  RidigBody.h  testPerson.h
src/GameEngine/src/physics/src/: Emitter.cpp  Particle.cpp  Physics.cpp  testPerson.cpp
src/GameEngine/src/shared/include/: Logger.h  Math.h
src/GameEngine/src/shared/src/: Logger.cpp  Math.cpp
src/GameLauncher/: MainWindow.xaml  MainWindow.xaml.cs
src/GameLauncher/View/UserControls/: InputField.xaml  InputField.xaml.cs  Login.xaml  Login.xaml.cs  Sidepanel.xaml  Sidepanel.xaml.cs
src/NetCommon/: NetCommon.vcxproj  net_message.h
src/NetworkingTest/: NetworkingTest.vcxproj
src/NetworkingTest/src/: main.cpp
src/SfmlProject/: SfmlProject.vcxproj  SfmlProject.vcxproj.filters
src/SfmlProject/src/: main.cpp
src/SfmlProject/src/core/: Engine.hpp
src/SfmlProject/src/core/include/: Engine.h
src/SfmlProject/src/core/src/: Engine.cpp
src/SfmlProject/src/physics/: testPerson.cpp
src/SfmlProject/src/physics/include/: Physics.h  RidigBody.h  testPerson.h
src/SfmlProject/src/physics/src/: Physics.cpp  RidigBody.cpp  testPerson.cpp
src/SfmlProject/src/shared/: debug.hpp
src/SfmlProject/src/shared/include/: Debug.h  Math.h
src/SfmlProject/src/shared/src/: Debug.cpp
src/core/: BasicShape.cpp  BasicShape.h  CMakeLists.txt  Camera.cpp  Camera.h  Framework.cpp  Framework.h  GameObject.cpp  GameObject.h  GameTime.cpp  GameTime.h  Renderable.h  ResourceHolder.hpp  ResourceHolder.inl
src/events/: CMakeLists.txt  IObserver.h  ISubject.cpp  ISubject.h
src/farmGame/: CMakeLists.txt  Crops.cpp  Crops.h  Tile.cpp  Tile.h  Tilemap.cpp  Tilemap.h  Tileset.cpp  Tileset.h
src/physics/: CMakeLists.txt  Emitter.cpp  Emitter.h  Particle.cpp  Particle.h  Physics.cpp  Physics.h  RigidBody.cpp  RigidBody.h  Sprite.cpp  Sprite.h
src/rendering/: CMakeLists.txt
src/shared/: CMakeLists.txt  JsonParser.cpp  JsonParser.h  Logger.cpp  Logger.h  Math.cpp  Math.h  pch.h
tests/: CMakeLists.txt
tools/development_scripts/: cmake.sh  doxygen.sh  help.sh
